--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,8 @@ const imageGroups = {
       en: ["Before","Fracture","Unstable","Suspended","Echo","Pattern","Collapse","After"]
     } 
   },
+ <!-- Atualizar no JavaScript: -->
+const imageGroups = {
   estruturas: { 
     images: [
       "./assets/estruturas/descontrucoes_costa-castelo_002-Enhanced-NR.jpg",
@@ -1260,8 +1262,36 @@ const imageGroups = {
       "./assets/estruturas/cid29.jpg"
     ], 
     titles: {
-      pt: Array(13).fill(""),
-      en: Array(13).fill("")
+      pt: [
+        "Desintegração Controlada",
+        "Vazios Habitados", 
+        "Linhas de Fuga",
+        "Pele de Concreto",
+        "Geometria do Acaso",
+        "Horizonte Contido",
+        "Varredura de Superfície",
+        "Sombra Estrutural",
+        "Reticulado Urbano",
+        "Fragmentação",
+        "Vértices de Luz",
+        "Simetria Imperfeita",
+        "Arquitetura do Esquecimento"
+      ],
+      en: [
+        "Controlled Disintegration",
+        "Inhabited Emptiness",
+        "Lines of Flight",
+        "Concrete Skin",
+        "Geometry of Chance",
+        "Contained Horizon",
+        "Surface Sweep",
+        "Structural Shadow",
+        "Urban Grid",
+        "Fragmentation",
+        "Vertices of Light",
+        "Imperfect Symmetry",
+        "Architecture of Forgetting"
+      ]
     }
   }
 };
