--- a/projects/structures-of-permanence.html
+++ b/projects/structures-of-permanence.html
@@ -2,228 +2,185 @@
 <html lang="pt">
 <head>
 <meta charset="UTF-8">
-<title>Structures of Permanence — Project</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Structures of Permanence — Pedro Cruz</title>
 
-<link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 
 <style>
-
-.page-wrapper{
-  max-width: 1150px;
-  margin: 0 auto;
-  padding: 40px 20px 80px;
-}
-
-/* language switch */
-.lang-toggle{
-  margin-bottom: 25px;
-}
-.lang-toggle button{
-  background: none;
-  border: 1px solid #888;
-  padding: 6px 10px;
-  margin-right: 8px;
-  cursor: pointer;
-}
-
-/* layout split with side index */
-
-.project-layout{
-  display:flex;
-  gap:36px;
-}
-
-.side-nav{
-  width:220px;
-  flex-shrink:0;
-  font-size:0.9rem;
-}
-
-.side-nav ul{
-  list-style:none;
-  padding:0;
-}
-
-.side-nav a{
-  text-decoration:none;
-  opacity:.7;
-}
-
-.side-nav a.active{
-  opacity:1;
-  font-weight:bold;
-}
-
-/* gallery */
-
-.gallery-grid{
-  flex:1;
+.gallery {
   display:grid;
-  grid-template-columns:1fr;
-  gap:28px;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:18px;
+  margin-top:30px;
 }
-
-.gallery-grid figure{ margin:0; }
-
-.gallery-grid img{
+.gallery figure{margin:0}
+.gallery img{
   width:100%;
   height:auto;
-  display:block;
-  cursor:zoom-in;
+  object-fit:cover;
+  border-radius:4px;
 }
-
-/* captions */
-figcaption{
-  margin-top:6px;
-  opacity:.75;
-  font-size:0.9rem;
-}
-
-/* responsive */
-@media(min-width: 900px){
-  .gallery-grid{
-    grid-template-columns:1fr 1fr;
-  }
-  .project-layout{
-    display:flex;
-  }
-}
-
-/* lightbox */
-.lightbox{
-  display:none;
+.lightbox {
   position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.92);
-  z-index:9999;
+  top:0;left:0;
+  width:100%;height:100%;
+  background:rgba(0,0,0,.9);
+  display:none;
   align-items:center;
   justify-content:center;
+  z-index:9999;
 }
 .lightbox img{
-  max-width:92%;
-  max-height:92%;
+  max-width:90%;
+  max-height:90%;
 }
-.lightbox:target{
-  display:flex;
-}
-.lightbox-close{
+.lightbox:target {display:flex;}
+.lightbox a{position:absolute;top:20px;right:30px;color:#fff;font-size:32px;text-decoration:none}
+.language-switch{margin-top:15px}
+.language-switch button{margin-right:10px}
+.project-nav{
   position:fixed;
-  top:18px;
-  right:24px;
-  color:white;
-  font-size:26px;
-  text-decoration:none;
+  top:50%;
+  right:10px;
+  display:flex;
+  flex-direction:column;
+  gap:10px;
 }
-
+.project-nav a{
+  background:#eee;
+  padding:6px 10px;
+  text-decoration:none;
+  border-radius:4px;
+}
 </style>
-</head>
 
+</head>
 <body>
 
-<div class="page-wrapper">
+<header>
+  <nav>
+    <ul>
+      <li><a href="/index.html">Home</a></li>
+      <li><a href="/projects.html" class="active">Projects</a></li>
+      <li><a href="/structures-of-permanence.html">Structures of Permanence</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+<main class="container">
 
   <h1>Structures of Permanence</h1>
 
-  <div class="lang-toggle">
-    <button onclick="setLang('pt')">Português</button>
-    <button onclick="setLang('en')">English</button>
+  <div class="language-switch">
+    <button onclick="showPT()">PT</button>
+    <button onclick="showEN()">EN</button>
   </div>
 
+  <section id="pt">
+    <p>
+      A série <strong>Structures of Permanence</strong> investiga a relação entre estrutura,
+      ruína e permanência material no espaço urbano e arquitectónico.
+    </p>
+  </section>
 
-<div class="project-layout">
+  <section id="en" style="display:none">
+    <p>
+      The series <strong>Structures of Permanence</strong> explores the relationship between
+      structure, ruin and material permanence in architectural and urban space.
+    </p>
+  </section>
 
-<!-- ░░░ SIDE PROJECT NAV — EDIT LINKS TO MATCH YOUR SITE ░░░ -->
+  <section class="gallery">
 
-<aside class="side-nav">
- <ul>
-  <li><a href="../projects/project-01.html">Projecto 1</a></li>
-  <li><a href="../projects/project-02.html">Projecto 2</a></li>
-  <li><a href="../projects/structures-of-permanence.html" class="active">Structures of Permanence</a></li>
-  <li><a href="../projects/project-04.html">Projecto 4</a></li>
- </ul>
-</aside>
+    <figure>
+      <a href="#lb1"><img loading="lazy" src="/assets/estrutura/_1est18.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb2"><img loading="lazy" src="/assets/estrutura/_2est28.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb3"><img loading="lazy" src="/assets/estrutura/_3est37.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb4"><img loading="lazy" src="/assets/estrutura/_4est32.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb5"><img loading="lazy" src="/assets/estrutura/_5est36.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb6"><img loading="lazy" src="/assets/estrutura/_6est35.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb7"><img loading="lazy" src="/assets/estrutura/_7est21.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb8"><img loading="lazy" src="/assets/estrutura/_8est33.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb9"><img loading="lazy" src="/assets/estrutura/_9est19.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb10"><img loading="lazy" src="/assets/estrutura/_10est14.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb11"><img loading="lazy" src="/assets/estrutura/_11est29.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb12"><img loading="lazy" src="/assets/estrutura/_12est30.jpg" alt=""></a>
+    </figure>
+
+    <figure>
+      <a href="#lb13"><img loading="lazy" src="/assets/estrutura/_13est10.jpg" alt=""></a>
+    </figure>
+
+  </section>
+
+  <!-- LIGHTBOXES -->
+  <div id="lb1" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_1est18.jpg"></div>
+  <div id="lb2" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_2est28.jpg"></div>
+  <div id="lb3" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_3est37.jpg"></div>
+  <div id="lb4" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_4est32.jpg"></div>
+  <div id="lb5" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_5est36.jpg"></div>
+  <div id="lb6" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_6est35.jpg"></div>
+  <div id="lb7" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_7est21.jpg"></div>
+  <div id="lb8" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_8est33.jpg"></div>
+  <div id="lb9" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_9est19.jpg"></div>
+  <div id="lb10" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_10est14.jpg"></div>
+  <div id="lb11" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_11est29.jpg"></div>
+  <div id="lb12" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_12est30.jpg"></div>
+  <div id="lb13" class="lightbox"><a href="#">×</a><img src="/assets/estrutura/_13est10.jpg"></div>
+
+</main>
 
 
-<!-- ░░░ MAIN CONTENT ░░░ -->
-
-<div>
-
-<!-- PT -->
-<section id="pt-text">
-<p>
-Este projecto reflete sobre persistência e presença estrutural no espaço construído.
-As imagens registam fragmentos de arquitectura que permanecem — mesmo quando a sua função se dissolve.
-Algumas fotografias resultam de longas exposições com variação de distância focal, intensificando a ideia de permanência no tempo.
-</p>
-</section>
-
-<!-- EN -->
-<section id="en-text" style="display:none">
-<p>
-This long-term project reflects on persistence and structural presence within the built environment.
-The images record fragments of architecture that endure — even when their original function dissolves.
-Some photographs were made through long exposure with focal variation, reinforcing the sense of time held within structure.
-</p>
-</section>
-
-
-<section class="gallery-grid">
-
-<figure><a href="#lb1"><img loading="lazy" src="../assets/estrutura/_1est18.jpg"></a><figcaption>Estrutura Latente / Latent Structure</figcaption></figure>
-
-<figure><a href="#lb2"><img loading="lazy" src="../assets/estrutura/_2est28.jpg"></a><figcaption>Fachada em Suspensão / Suspended Facade</figcaption></figure>
-
-<figure><a href="#lb3"><img loading="lazy" src="../assets/estrutura/_3est37.jpg"></a><figcaption>Geometria Residual / Residual Geometry</figcaption></figure>
-
-<figure><a href="#lb4"><img loading="lazy" src="../assets/estrutura/_4est32.jpg"></a><figcaption>Ordem Parcial / Partial Order</figcaption></figure>
-
-<figure><a href="#lb5"><img loading="lazy" src="../assets/estrutura/_5est36.jpg"></a><figcaption>Repetição Persistente / Persistent Repetition</figcaption></figure>
-
-<figure><a href="#lb6"><img loading="lazy" src="../assets/estrutura/_6est35.jpg"></a><figcaption>Intervalo Arquitectónico / Architectural Interval</figcaption></figure>
-
-<figure><a href="#lb7"><img loading="lazy" src="../assets/estrutura/_7est21.jpg"></a><figcaption>Cidade em Eco / Echoing City</figcaption></figure>
-
-<figure><a href="#lb8"><img loading="lazy" src="../assets/estrutura/_8est33.jpg"></a><figcaption>Reflexo Invertido / Inverted Reflection</figcaption></figure>
-
-<figure><a href="#lb9"><img loading="lazy" src="../assets/estrutura/_9est19.jpg"></a><figcaption>Estratigrafia Urbana / Urban Stratigraphy</figcaption></figure>
-
-<figure><a href="#lb10"><img loading="lazy" src="../assets/estrutura/_10est14.jpg"></a><figcaption>Vestígios de Luz / Traces of Light</figcaption></figure>
-
-<figure><a href="#lb11"><img loading="lazy" src="../assets/estrutura/_11est29.jpg"></a><figcaption>Antenas no Crepúsculo / Antennas at Dusk</figcaption></figure>
-
-<figure><a href="#lb12"><img loading="lazy" src="../assets/estrutura/_12est30.jpg"></a><figcaption>Céu em Ruptura / Fractured Sky</figcaption></figure>
-
-<figure><a href="#lb13"><img loading="lazy" src="../assets/estrutura/_13est10.jpg"></a><figcaption>Noite Diluída / Dissolved Night</figcaption></figure>
-
-</section>
-
+<!-- PROJECT SIDE NAVIGATION -->
+<div class="project-nav">
+  <a href="/previous-project.html">← Projecto anterior</a>
+  <a href="/next-project.html">Próximo projecto →</a>
 </div>
-</div>
-</div>
-
-
-<!-- LIGHTBOX -->
-
-<div id="lb1" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_1est18.jpg"></div>
-<div id="lb2" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_2est28.jpg"></div>
-<div id="lb3" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_3est37.jpg"></div>
-<div id="lb4" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_4est32.jpg"></div>
-<div id="lb5" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_5est36.jpg"></div>
-<div id="lb6" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_6est35.jpg"></div>
-<div id="lb7" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_7est21.jpg"></div>
-<div id="lb8" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_8est33.jpg"></div>
-<div id="lb9" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_9est19.jpg"></div>
-<div id="lb10" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_10est14.jpg"></div>
-<div id="lb11" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_11est29.jpg"></div>
-<div id="lb12" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_12est30.jpg"></div>
-<div id="lb13" class="lightbox"><a class="lightbox-close" href="#">×</a><img src="../assets/estrutura/_13est10.jpg"></div>
 
 
 <script>
-function setLang(lang){
-  document.getElementById('pt-text').style.display = lang==='pt' ? 'block':'none';
-  document.getElementById('en-text').style.display = lang==='en' ? 'block':'none';
+function showPT(){
+  document.getElementById("pt").style.display="block";
+  document.getElementById("en").style.display="none";
+}
+function showEN(){
+  document.getElementById("pt").style.display="none";
+  document.getElementById("en").style.display="block";
 }
 </script>
 
